[package]
name = "simpledns"
description = "A simple dns resolver CLI"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.1.4", features = [
	"derive",
	"env",
	"cargo",
	"unicode",
	"string",
	"wrap_help",
] }
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
trust-dns-resolver = { version = "0.22.0", features = ["dns-over-rustls"] }
trust-dns-server = "0.22.0"
