[package]
name = "simpledns"
description = "A simple dns resolver CLI"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = [
	"derive",
	"env",
	"cargo",
	"unicode",
	"string",
	"wrap_help",
] }
dnsclient = { version = "0.1.18", features = [
	"async-tokio",
], default-features = false }
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
